Fix a crash when switching subwindows after removing a layer

This happened becayse KisView stored a pointer to a locally active
layer which has been deleted while the view was inactive

BUG:355205