krita/image/krita_utils.h
@@ -26,8 +26,10 @@ class QPen;
 class QPointF;
 class QPainterPath;
 class QBitArray;
+
 #include <QVector>
 #include "kritaimage_export.h"
+#include "kis_types.h"
 
 namespace KritaUtils
 {
@@ -62,6 +64,8 @@ namespace KritaUtils
 
     quint8 KRITAIMAGE_EXPORT mergeOpacity(quint8 opacity, quint8 parentOpacity);
     QBitArray KRITAIMAGE_EXPORT mergeChannelFlags(const QBitArray &flags, const QBitArray &parentFlags);
+
+    KisNodeSP KRITAIMAGE_EXPORT nearestNodeAfterRemoval(KisNodeSP node);
 }
 
 #endif /* __KRITA_UTILS_H */
